--- a/package.json
+++ b/package.json
@@ -18,5 +18,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@apollo/client": "^3.7.10",
+    "autoprefixer": "^10.4.14",
+    "chartjs": "^0.3.24",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "postcss": "^8.4.21",
+    "react-chartjs-2": "^5.2.0",
+    "realm-web": "^2.0.0",
+    "tailwindcss": "^3.2.7"
   }
 }
