--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "module"
   },
   "dependencies": {
     "@types/node": "18.15.5",
@@ -21,11 +22,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "ts-node": "^10.9.1",
     "typescript": "5.0.2"
   },
   "devDependencies": {
     "@apollo/client": "^3.7.10",
-   
     "autoprefixer": "^10.4.14",
     "chartjs": "^0.3.24",
     "graphql": "^16.6.0",
