--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "type": "module"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
+    "@tailwindui/react": "^0.1.1",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -22,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-select": "^5.7.2",
     "ts-node": "^10.9.1",
     "typescript": "5.0.2"
   },
