--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-icons": "^4.8.0",
     "react-select": "^5.7.2",
     "ts-node": "^10.9.1",
-    "typescript": "5.0.2"
+    "typescript": "5.0.2",
+    "use-local-storage": "^2.3.6"
   },
   "devDependencies": {
     "@apollo/client": "^3.7.10",
